--- a/170516/Views/Administrator/UpdateProduct.cshtml
+++ b/170516/Views/Administrator/UpdateProduct.cshtml
@@ -1,6 +1,6 @@
 ﻿@model _170516.Models.Administrator.UpdateProductModel
 @{
-    ViewBag.Title = "Tạo sản phẩm mới";
+    ViewBag.Title = "Cập nhật sản phẩm";
 }
 <div class="row">
     <div class="col-md-12">
@@ -11,31 +11,20 @@
                     <li><a href="@Url.Action("ViewProduct","Administrator")">Quản Lý Sản Phẩm</a></li>
                     <li class="active">Cập Nhật Sản Phẩm</li>
                 </ol>
-                <div class="panel-title title-3">Cập Nhật Sản Phẩm - @Model.</div>
+                <div class="panel-title title-3">Cập Nhật Sản Phẩm - @Model.ProductName</div>
             </div>
             <div class="panel-body">
-                <form id="AddProductForm">
+                <form id="UpdateProductForm">
                     <div class="form-horizontal">
-                        <div class="row">
-                            <div class="col-md-4 col-lg-4">
-                                <div class="form-group">
-                                    @*<label class="control-label">Ảnh Sản Phẩm</label>*@
-                                    <!-- IMAGE -->
-                                    <div class="image-box">
-                                        <img id="ImageBox" src="~/Content/Image/image_placeholder.jpg" class="image-box" />
-                                        <div id="ImagePreviewBox" class="preview-box" style="max-width:80%;"></div>
-                                        <input id="ImageUpload" type="file" class="image-file-input" name="ImageUpload" />
-                                        <input id="ProductImage" type="hidden" name="ProductImage" />
-                                        <h6 id="ImageName" class="image-name"></h6>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="row">                            
                             <div class="col-md-8 col-lg-8">
+                                <!-- PRODUCT ID -->
+                                <input type="hidden" value="@Model.ProductID" id="ProductID" name="ProductID"/>
                                 <!-- PRODUCT NAME -->
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="ProductName">Tên Sản Phẩm <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
-                                        <input type="text" class="form-control" id="ProductName" name="ProductName">
+                                        <input type="text" class="form-control" id="ProductName" name="ProductName" value="@Model.ProductName">
                                         <span class="input-error-box text-danger"></span>
                                     </div>
                                 </div>
@@ -48,7 +37,14 @@
                                             <select id="ProductCategoryID" class="form-control" name="ProductCategoryID">
                                                 @foreach (var category in Model.CategoryList)
                                                 {
-                                                    <option value="@category.CategoryID">@category.CategoryName</option>
+                                                    if (category.CategoryID == Model.SelectedCategoryID)
+                                                    {
+                                                        <option value="@category.CategoryID" selected>@category.CategoryName</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="@category.CategoryID">@category.CategoryName</option>
+                                                    }                                                    
                                                 }
                                             </select>
                                             <span class="field-validation-valid" data-valmsg-for="CategoryID" data-valmsg-replace="true"></span>
@@ -63,34 +59,15 @@
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="ProductQuantity">Số Lượng <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
-                                        <input type="number" class="form-control" id="ProductQuantity" name="ProductQuantity">
+                                        <input type="number" class="form-control" id="ProductQuantity" name="ProductQuantity" value="@Model.ProductQuantity">
                                         <span class="input-error-box text-danger"></span>
                                     </div>
-                                </div>
-                                <!-- WEIGHT -->
-                                <div class="form-group">
-                                    <label class="col-sm-3 control-label" for="ProductWeight">Cân Nặng <span class="text-danger">*</span></label>
-                                    <div class="col-sm-7">
-                                        <input type="text" class="form-control double-input large-input" id="ProductWeight" name="ProductWeight">
-                                        <h6>kilogram</h6>
-                                        <br />
-                                        <span class="input-error-box text-danger"></span>
-                                    </div>
-                                </div>
-                                <!-- DISCOUNT -->
-                                <div class="form-group">
-                                    <label class="col-sm-3 control-label" for="ProductDiscount">Khuyến Mãi</label>
-                                    <div class="col-sm-7">
-                                        <input type="text" class="form-control double-input large-input" id="ProductDiscount" name="ProductDiscount">
-                                        <h6>%</h6>
-                                        <span class="input-error-box text-danger"></span>
-                                    </div>
-                                </div>
+                                </div>                                
                                 <!-- SIZE -->
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="ProductSize">Kích Cỡ <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
-                                        <input type="text" class="form-control" id="ProductSize" name="ProductSize">
+                                        <input type="text" class="form-control" id="ProductSize" name="ProductSize" value="@Model.ProductSize">
                                         <span class="input-error-box text-danger"></span>
                                     </div>
                                 </div>
@@ -103,7 +80,14 @@
                                             <select id="ProductSupplierID" name="ProductSupplierID" class="form-control">
                                                 @foreach (var supplier in Model.SupplierList)
                                                 {
-                                                    <option value="@supplier.SupplierID">@supplier.SupplierName</option>
+                                                    if (supplier.SupplierID == Model.SelectedSupplierID) 
+                                                    { 
+                                                        <option value="@supplier.SupplierID" selected>@supplier.SupplierName</option>
+                                                    }
+                                                    else 
+                                                    { 
+                                                        <option value="@supplier.SupplierID">@supplier.SupplierName</option>
+                                                    }
                                                 }
                                             </select>
                                         }
@@ -112,17 +96,40 @@
                                             <h6>Chưa có dữ liệu</h6>
                                         }
                                     </div>
+                                </div>                                
+                                <!-- WEIGHT -->
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="ProductWeight">Cân Nặng <span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control double-input large-input" id="ProductWeight" name="ProductWeight" value="@Model.ProductWeight">
+                                        <h6>kilogram</h6>
+                                        <br />
+                                        <span class="input-error-box text-danger"></span>
+                                    </div>
+                                </div>
+                                <!-- DISCOUNT -->
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="ProductDiscount">Khuyến Mãi</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control double-input large-input" id="ProductDiscount" name="ProductDiscount" value="@Model.ProductDiscount">
+                                        <h6>%</h6>
+                                        <span class="input-error-box text-danger"></span>
+                                    </div>
                                 </div>
                                 <!-- PRICE -->
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="ProductPrice">Giá <span class="text-danger">*</span></label>
-                                    <div class="col-sm-3">
-                                        <input type="text" class="form-control" id="ProductPrice" name="ProductPrice">
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control double-input large-input" id="ProductPrice" name="ProductPrice" value="@Model.ProductPrice">
+                                        <h6>VNĐ</h6>
                                         <span class="input-error-box text-danger"></span>
                                     </div>
-                                    <label class="col-sm-1 control-label" for="ProductUnit">Đơn Vị <span class="text-danger">*</span></label>
-                                    <div class="col-sm-3">
-                                        <input type="text" class="form-control" id="ProductUnit" name="ProductUnit">
+                                </div>
+                                <!-- UNIT -->
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="ProductUnit">Đơn vị <span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control double-input" id="ProductUnit" name="ProductUnit" value="@Model.ProductUnit">
                                         <span class="input-error-box text-danger"></span>
                                     </div>
                                 </div>
@@ -130,41 +137,38 @@
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="ProductDescription">Mô Tả</label>
                                     <div class="col-sm-7">
-                                        <textarea class="form-control" id="ProductDescription" name="ProductDescription"></textarea>
+                                        <textarea class="form-control" id="ProductDescription" name="ProductDescription" style="height: 115px;">@Model.ProductDescription</textarea>
                                         <span class="input-error-box text-danger"></span>
                                     </div>
                                 </div>
-                                <!-- COLOR -->
-                                @*<div class="form-group">
-                                        <label class="col-sm-3 control-label">Màu Sắc</label>
-                                        <div class="col-sm-7">
-                                            <a href="#" id="addColorLink" data-modal="AddColor">Thêm màu sắc mới</a>
-                                            <div class="color-group-div" id="ColorGroup">
-                                                @if (!Model.AvailableColorList.Any())
-                                                {
-                                                    <ul class="list-group">
-                                                        @foreach (var color in Model.AvailableColorList)
-                                                        {
-                                                            <li class="list-group-item">
-                                                                <input type="hidden" value="@color.ColorID" />
-                                                                <a href="#"><i class="glyphicon glyphicon-remove"></i></a>
-                                                                <span>@color.ColorName</span>
-                                                                <img src="@color.Base64" />
-                                                            </li>
-                                                        }
-                                                    </ul>
-                                                }
-                                            </div>
-                                            <span class="field-validation-valid" data-valmsg-for="ProductColorID" data-valmsg-replace="true"></span>
-                                        </div>
-                                    </div>*@
+                            </div>
+                            <div class="col-md-4 col-lg-4">                                
+                                <div class="form-group">
+                                    <!-- IMAGE -->
+                                    <label class="control-label">Ảnh Sản Phẩm</label>
+                                    <div class="image-box">
+                                        @if (string.IsNullOrEmpty(Model.ProductImage))
+                                        {
+                                            <img id="ImageBox" src="~/Content/Image/image_placeholder.jpg" class="image-box" />
+                                        }
+                                        else
+                                        {
+                                            <img id="ImageBox" src="@Model.ProductImage" class="image-box" />    
+                                        }
+                                        
+                                        <div id="ImagePreviewBox" class="preview-box" style="max-width:80%;"></div>
+                                        <input id="ImageUpload" type="file" class="image-file-input" name="ImageUpload" />
+                                        <input id="ProductImage" type="hidden" name="ProductImage" />
+                                        <h5 id="ImageName" class="image-name"></h5>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12 col-lg-12">
                                 <div class="form-group">
                                     <div class="col-md-12 form-button">
-                                        <button class="btn btn-primary" type="button" id="SubmitAddProduct"><i class="glyphicon glyphicon-floppy-disk"></i> Lưu</button>
+                                        <button class="btn btn-primary" type="button" id="SubmitUpdateProduct"><i class="glyphicon glyphicon-floppy-disk"></i> Lưu</button>
                                         <button class="btn btn-danger" type="reset"><i class="glyphicon glyphicon-remove"></i> Xóa</button>
                                     </div>
                                 </div>
@@ -175,8 +179,6 @@
             </div>
         </div>
     </div>
-</div>
-<div id='AddColorModal' class='modal fade' data-url='@Url.Action("AddColor", "Administrator")'>
 </div>
 @section Scripts
 {
