--- a/170516/Views/Administrator/ViewProduct.cshtml
+++ b/170516/Views/Administrator/ViewProduct.cshtml
@@ -59,15 +59,16 @@
                                     {
                                         <option value="100">100</option>
                                     }
-                                </select>                                    
+                                </select>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div id="dataTables_show_item_search" class="dataTables_search_div form-inline">
-                                @if(!string.IsNullOrEmpty(Model.SearchText) && Model.SearchText.Equals("NULL"))
+                                @if (!string.IsNullOrEmpty(Model.SearchText) && Model.SearchText.Equals("NULL"))
                                 {
-                                    <input type="search" class="form-control input-sm" value="">    
-                                } else 
+                                    <input type="search" class="form-control input-sm" value="">
+                                }
+                                else
                                 {
                                     <input type="search" class="form-control input-sm" value="@Model.SearchText">
                                 }
@@ -80,26 +81,96 @@
                             <table class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" id="dataTable_example" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
                                 <thead>
                                     <tr role="row">
-                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1">#</th>
-                                        <th class="sorting_asc center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1">Tên</th>
-                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1">Danh Mục</th>
-                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1">Số Lượng</th>
-                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1">Ngày Cập Nhật</th>
-                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1">Người Cập Nhật</th>
-                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"></th>
+                                        <th class="center" tabindex="0" rowspan="1" colspan="1">#</th>
+                                        @if (Model.SortField.Equals("ProductName"))
+                                        {
+                                            if (Model.IsAsc)
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="ProductName" data-direction="desc" colspan="1">Tên <i class="fa fa-fw fa-sort-asc"></i></th>
+                                            }
+                                            else
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="ProductName" data-direction="asc" colspan="1">Tên <i class="fa fa-fw fa-sort-desc"></i></th>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <th class="center" tabindex="0" rowspan="1" data-sort="ProductName" data-direction="asc" colspan="1">Tên <i class="fa fa-fw fa-sort-asc"></i></th>
+                                        }                                        
+                                        @if (Model.SortField.Equals("CategoryName"))
+                                        {
+                                            if (Model.IsAsc)
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="CategoryName" data-direction="desc" colspan="1">Tên danh mục <i class="fa fa-fw fa-sort-asc"></i></th>
+                                            }
+                                            else
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="CategoryName" data-direction="asc" colspan="1">Tên danh mục <i class="fa fa-fw fa-sort-desc"></i></th>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <th class="center" tabindex="0" rowspan="1" data-sort="CategoryName" data-direction="asc" colspan="1">Tên danh mục <i class="fa fa-fw fa-sort-asc"></i></th>
+                                        }
+                                        @if (Model.SortField.Equals("QuantityInStock"))
+                                        {
+                                            if (Model.IsAsc)
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="QuantityInStock" data-direction="desc" colspan="1">Số lượng <i class="fa fa-fw fa-sort-asc"></i></th>
+                                            }
+                                            else
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="QuantityInStock" data-direction="asc" colspan="1">Số lượng <i class="fa fa-fw fa-sort-desc"></i></th>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <th class="center" tabindex="0" rowspan="1" data-sort="QuantityInStock" data-direction="asc" colspan="1">Số lượng <i class="fa fa-fw fa-sort-asc"></i></th>
+                                        }
+                                        @if (Model.SortField.Equals("DateModified"))
+                                        {
+                                            if (Model.IsAsc)
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="DateModified" data-direction="desc" colspan="1">Ngày cập nhật <i class="fa fa-fw fa-sort-asc"></i></th>
+                                            }
+                                            else
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="DateModified" data-direction="asc" colspan="1">Ngày cập nhật <i class="fa fa-fw fa-sort-desc"></i></th>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <th class="center" tabindex="0" rowspan="1" data-sort="DateModified" data-direction="asc" colspan="1">Ngày cập nhật <i class="fa fa-fw fa-sort-asc"></i></th>
+                                        }
+                                        @if (Model.SortField.Equals("ModifiedUser"))
+                                        {
+                                            if (Model.IsAsc)
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="ModifiedUser" data-direction="desc" colspan="1">Người cập nhật <i class="fa fa-fw fa-sort-asc"></i></th>
+                                            }
+                                            else
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="ModifiedUser" data-direction="asc" colspan="1">Người cập nhật <i class="fa fa-fw fa-sort-desc"></i></th>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <th class="center" tabindex="0" rowspan="1" data-sort="ModifiedUser" data-direction="asc" colspan="1">Người cập nhật <i class="fa fa-fw fa-sort-asc"></i></th>
+                                        }
+                                        <th class="center" tabindex="0" rowspan="1" colspan="1"></th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @for (var i = 1; i <= Model.Products.Count; i++)
                                     {
                                         <tr class="gradeA odd" role="row">
-                                            <td class="sorting">@i</td>
-                                            <td class="sorting_1">@Model.Products[i - 1].ProductName</td>
+                                            <td>@i</td>
+                                            <td>@Model.Products[i - 1].ProductName</td>
                                             <td>@Model.Products[i - 1].CategoryName</td>
                                             <td>@Model.Products[i - 1].QuantityInStock</td>
-                                            <td class="center">@Model.Products[i - 1].DateModified.ToString("dd/MM/yyyy hh:mm")</td>
-                                            <td class="center">@Model.Products[i - 1].ModifiedUser</td>
-                                            <td class="center">
+                                            <td>@Model.Products[i - 1].DateModified.ToString("dd/MM/yyyy hh:mm")</td>
+                                            <td>@Model.Products[i - 1].ModifiedUser</td>
+                                            <td>
                                                 <a class="action-link detail-link" title="Chi tiết" href="@Url.Action("ViewProductDetail", "Administrator", new { id = Model.Products[i - 1].ProductID })"><i class="fa fa-info-circle"></i></a>
                                                 <a class="action-link update-link" title="Cập nhật" href="@Url.Action("UpdateProduct", "Administrator", new { id = Model.Products[i - 1].ProductID })"><i class="fa fa-pencil"></i></a>
                                                 <a class="action-link remove-link" title="Xóa" href="#" data-url="@Url.Action("RemoveProduct", "Administrator", new { id = Model.Products[i - 1].ProductID })"><i class="fa fa-remove"></i></a>
@@ -122,7 +193,7 @@
                                     {
                                         <li class="paginate_button previous disabled" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous">
                                             <a href="#">Trước</a>
-                                        </li>    
+                                        </li>
                                     }
                                     else
                                     {
@@ -130,20 +201,21 @@
                                             <a href="@Url.Action("ViewProduct", "Administrator", new {page = Model.CurrentPage - 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Trước</a>
                                         </li>
                                     }
-                                    
+
                                     @for (var i = 0; i < 5; i++)
                                     {
-                                        if ((Model.CurrentPage + i) <= Model.TotalPage) { 
+                                        if ((Model.CurrentPage + i) <= Model.TotalPage)
+                                        {
                                             if (i == 0)
                                             {
                                                 <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0">
-                                                    <a href="@Url.Action("ViewProduct", "Administrator", new {page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">@((Model.CurrentPage+i).ToString())</a>
+                                                    <a href="@Url.Action("ViewProduct", "Administrator", new {page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">@((Model.CurrentPage + i).ToString())</a>
                                                 </li>
                                             }
                                             else
                                             {
                                                 <li class="paginate_button" aria-controls="dataTables-example" tabindex="0">
-                                                    <a href="@Url.Action("ViewProduct", "Administrator", new { page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc })">@((Model.CurrentPage+i).ToString())</a>
+                                                    <a href="@Url.Action("ViewProduct", "Administrator", new { page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc })">@((Model.CurrentPage + i).ToString())</a>
                                                 </li>
                                             }
                                         }
@@ -160,7 +232,7 @@
                                         <li class="paginate_button next" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next">
                                             <a href="@Url.Action("ViewProduct", "Administrator", new {page = Model.CurrentPage + 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Sau</a>
                                         </li>
-                                    }                                    
+                                    }
                                 </ul>
                             </div>
                         </div>
