--- a/170516/Views/Administrator/ViewProductDetail.cshtml
+++ b/170516/Views/Administrator/ViewProductDetail.cshtml
@@ -105,6 +105,20 @@
                                     }
                                 </div>
                             </div>
+                            @*<div class="form-group">
+                                <!-- USER MODIFIED -->
+                                <label class="control-label" for="ProductDescription">Người cập nhật</label>
+                                <div class="col-sm-7">
+                                    <p class="h6-style info-box">@Model.UserModified</p>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <!-- DATE MODIFIED -->
+                                <label class="control-label" for="ProductDescription">Ngày cập nhật</label>
+                                <div class="col-sm-7">
+                                    <p class="h6-style info-box">@Model.DateModified.ToString("dd/MM/yyyy hh:mm:ss")</p>
+                                </div>
+                            </div>*@
                         </div>
                     </div>
                 </div>
