--- a/170516/Views/Administrator/ViewProduct.cshtml
+++ b/170516/Views/Administrator/ViewProduct.cshtml
@@ -173,7 +173,7 @@
                                             <td>
                                                 <a class="action-link detail-link" title="Chi tiết" href="@Url.Action("ViewProductDetail", "Administrator", new { id = Model.Products[i - 1].ProductID })"><i class="fa fa-info-circle"></i></a>
                                                 <a class="action-link update-link" title="Cập nhật" href="@Url.Action("UpdateProduct", "Administrator", new { id = Model.Products[i - 1].ProductID })"><i class="fa fa-pencil"></i></a>
-                                                <a class="action-link remove-link" title="Xóa" href="#" data-url="@Url.Action("RemoveProduct", "Administrator", new { id = Model.Products[i - 1].ProductID })"><i class="fa fa-remove"></i></a>
+                                                <a class="action-link remove-link product" title="Xóa" href="#" data-url="@Url.Action("RemoveProduct", "Administrator", new { id = Model.Products[i - 1].ProductID })"><i class="fa fa-remove"></i></a>
                                             </td>
                                         </tr>
                                     }
