--- a/170516/Views/Administrator/ViewProductCategory.cshtml
+++ b/170516/Views/Administrator/ViewProductCategory.cshtml
@@ -7,47 +7,232 @@
     <div class="col-md-12">
         <div class="content-box-large">
             <div class="panel-heading">
+                <ol class="breadcrumb">
+                    <li class="active">Quản Lý Danh mục</li>
+                </ol>
                 <div class="panel-title title-3">Danh Sách Danh Mục</div>
                 <div class="panel-options">
-                    <a id="addBtn" href="@Url.Action("AddProductCategory", "Administrator")" class="btn btn-primary btn-xs" style="margin-top:0px;"><i class="glyphicon glyphicon-plus"></i> Thêm</a>                    
+                    <a id="addBtn" href="@Url.Action("AddProductCategory", "Administrator")" class="btn btn-primary btn-xs" style="margin-top:0px;"><i class="glyphicon glyphicon-plus"></i> Thêm</a>
                 </div>
             </div>
             <div class="panel-body">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>#</th>
-                            <th>Tên</th>
-                            <th>Mô Tả</th>
-                            <th></th>                            
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.Categories)
-                        {
-                            <tr>
-                                <td>@item.CategoryID</td>
-                                <td>@item.Name</td>
-                                <td>@item.Description</td>
-                                <td>
-                                    <a href="@Url.Action("ViewProductCategoryDetail","Administrator",new {id = item.CategoryID})"><i class="glyphicon glyphicon-search"></i></a>
-                                    <a href="@Url.Action("UpdateProductCategory","Administrator",new {id = item.CategoryID})"><i class="glyphicon glyphicon-pencil"></i></a>
-                                    <a href="@Url.Action("RemoveProductCategory","Administrator",new {id = item.CategoryID})"><i class="glyphicon glyphicon-remove"></i></a>
-                                </td>
-                            </tr>
-                        }                                               
-                    </tbody>
-                </table>
+             @if (Model.Categories.Any())
+            {
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <input type="hidden" id="dataTables_sort_field_hidden" value="@Model.SortField" />
+                            <input type="hidden" id="dataTables_sort_direction_hidden" value="@Model.IsAsc" />
+                            <div class="dataTables_show_item_div form-inline">
+                                <label><span>Hiển thị</span></label>
+                                <select id="dataTables_showNumberSelectCategory" aria-controls="dataTables-example" class="form-control input-sm">
+                                    @if (Model.ItemOnPage == 10)
+                                    {
+                                        <option value="10" selected>10</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="10">10</option>
+                                    }
+                                    @if (Model.ItemOnPage == 25)
+                                    {
+                                        <option value="25" selected>25</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="25">25</option>
+                                    }
+                                    @if (Model.ItemOnPage == 50)
+                                    {
+                                        <option value="50" selected>50</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="50">50</option>
+                                    }
+                                    @if (Model.ItemOnPage == 100)
+                                    {
+                                        <option value="100" selected>100</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="100">100</option>
+                                    }
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div id="dataTables_show_item_search" class="dataTables_search_div form-inline">
+                                @if (!string.IsNullOrEmpty(Model.SearchText) && Model.SearchText.Equals("NULL"))
+                                {
+                                    <input type="search" class="form-control input-sm" value="">
+                                }
+                                else
+                                {
+                                    <input type="search" class="form-control input-sm" value="@Model.SearchText">
+                                }
+                                <button type="button" id="dataTables_searchCategory" class="btn btn-default btn-sm"><i class="fa fa-search"></i></button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-sm-12 dataTable_grid">
+                            <table class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" id="dataTable_category" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
+                                <thead>
+                                    <tr role="row">
+                                        <th class="center" tabindex="0" rowspan="1" colspan="1">#</th>
+                                        @if (Model.SortField.Equals("CategoryName"))
+                                        {
+                                            if (Model.IsAsc)
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="CategoryName" data-direction="desc" colspan="1">Tên <i class="fa fa-fw fa-sort-asc"></i></th>
+                                            }
+                                            else
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="CategoryName" data-direction="asc" colspan="1">Tên <i class="fa fa-fw fa-sort-desc"></i></th>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <th class="center" tabindex="0" rowspan="1" data-sort="CategoryName" data-direction="asc" colspan="1">Tên <i class="fa fa-fw fa-sort-asc"></i></th>
+                                        }
+                                        @if (Model.SortField.Equals("CategoryDescription"))
+                                        {
+                                            if (Model.IsAsc)
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="CategoryDescription" data-direction="desc" colspan="1">Mô tả <i class="fa fa-fw fa-sort-asc"></i></th>
+                                            }
+                                            else
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="CategoryDescription" data-direction="asc" colspan="1">Mô tả <i class="fa fa-fw fa-sort-desc"></i></th>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <th class="center" tabindex="0" rowspan="1" data-sort="CategoryDescription" data-direction="asc" colspan="1">Mô tả <i class="fa fa-fw fa-sort-asc"></i></th>
+                                        }
+
+                                        @if (Model.SortField.Equals("DateModified"))
+                                        {
+                                            if (Model.IsAsc)
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="DateModified" data-direction="desc" colspan="1">Ngày cập nhật <i class="fa fa-fw fa-sort-asc"></i></th>
+                                            }
+                                            else
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="DateModified" data-direction="asc" colspan="1">Ngày cập nhật <i class="fa fa-fw fa-sort-desc"></i></th>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <th class="center" tabindex="0" rowspan="1" data-sort="DateModified" data-direction="asc" colspan="1">Ngày cập nhật <i class="fa fa-fw fa-sort-asc"></i></th>
+                                        }
+                                        @if (Model.SortField.Equals("CreatedUser"))
+                                        {
+                                            if (Model.IsAsc)
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="CreatedUser" data-direction="desc" colspan="1">Người tạo <i class="fa fa-fw fa-sort-asc"></i></th>
+                                            }
+                                            else
+                                            {
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="CreatedUser" data-direction="asc" colspan="1">Người tạo <i class="fa fa-fw fa-sort-desc"></i></th>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <th class="center" tabindex="0" rowspan="1" data-sort="CreatedUser" data-direction="asc" colspan="1">Người tạo<i class="fa fa-fw fa-sort-asc"></i></th>
+                                        }
+                                        <th class="center" tabindex="0" rowspan="1" colspan="1"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @for (var i = 1; i <= Model.Categories.Count; i++)
+                                    {
+                                        <tr class="gradeA odd" role="row">
+                                            <td>@i</td>
+                                            <td>@Model.Categories[i - 1].Name</td>
+                                            <td>@Model.Categories[i - 1].Description</td>
+                                            <td>@Model.Categories[i - 1].DateModified.ToString("dd/MM/yyyy hh:mm")</td>
+                                            <td>@Model.Categories[i - 1].CreatedUserID</td>
+                                            <td>                                                
+                                                <a class="action-link detail-link" title="Chi tiết" href="@Url.Action("ViewProductCategoryDetail", "Administrator", new { id = Model.Categories[i - 1].CategoryID })"><i class="fa fa-info-circle"></i></a>
+                                                <a class="action-link update-link" title="Cập nhật" href="@Url.Action("UpdateProductCategory", "Administrator", new { id = Model.Categories[i - 1].CategoryID })"><i class="fa fa-pencil"></i></a>
+                                                <a class="action-link remove-link category" title="Xóa" href="#" data-url="@Url.Action("RemoveProduct", "Administrator", new { id = Model.Categories[i - 1].CategoryID })"><i class="fa fa-remove"></i></a>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="dataTables_info" role="status" aria-live="polite">Hiển thị từ @Model.StartIndex tới @Model.EndIndex trong @Model.TotalNumber danh mục</div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="dataTables_paginate">
+                                <ul class="pagination">
+                                    @if (Model.CurrentPage == 1)
+                                    {
+                                        <li class="paginate_button previous disabled" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous">
+                                            <a href="#">Trước</a>
+                                        </li>
+                                    }
+                                    else
+                                    {
+                                        <li class="paginate_button previous" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous">
+                                            <a href="@Url.Action("ViewProductCategory", "Administrator", new {page = Model.CurrentPage - 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Trước</a>
+                                        </li>
+                                    }
+
+                                    @for (var i = 0; i < 5; i++)
+                                    {
+                                        if ((Model.CurrentPage + i) <= Model.TotalPage)
+                                        {
+                                            if (i == 0)
+                                            {
+                                                <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0">
+                                                    <a href="@Url.Action("ViewProductCategory", "Administrator", new {page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">@((Model.CurrentPage + i).ToString())</a>
+                                                </li>
+                                            }
+                                            else
+                                            {
+                                                <li class="paginate_button" aria-controls="dataTables-example" tabindex="0">
+                                                    <a href="@Url.Action("ViewProductCategory", "Administrator", new { page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc })">@((Model.CurrentPage + i).ToString())</a>
+                                                </li>
+                                            }
+                                        }
+                                    }
+
+                                    @if (Model.CurrentPage == Model.TotalPage)
+                                    {
+                                        <li class="paginate_button next disabled" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next">
+                                            <a href="#">Sau</a>
+                                        </li>
+                                    }
+                                    else
+                                    {
+                                        <li class="paginate_button next" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next">
+                                            <a href="@Url.Action("ViewProductCategory", "Administrator", new {page = Model.CurrentPage + 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Sau</a>
+                                        </li>
+                                    }
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    <h5>Không có danh mục nào được lưu trong cơ sở dữ liệu. Vui lòng tạo sản phẩm mới tại <a href="@Url.Action("AddProductCategory", "Administrator")">đây</a></h5>
+                }
             </div>
         </div>
     </div>
 </div>
 
-<div id='addProductCategoryModal' class='modal fade' data-url='@Url.Action("AddProductCategory", "Administrator")'>
-</div>
 
 @section Scripts
-{   
+{
     <script src="@Url.Content("~/Scripts/Admin/category.js")"></script>
 }
 
