--- a/170516/Views/Administrator/ViewProductCategoryDetail.cshtml
+++ b/170516/Views/Administrator/ViewProductCategoryDetail.cshtml
@@ -1,4 +1,4 @@
-﻿@model _170516.Models.Administrator.CreateProductCategoryModel
+﻿@model _170516.Models.Administrator.ViewProductCategoryItem
 @{
     ViewBag.Title = "ViewProductCategoryDetail";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -19,31 +19,49 @@
             <div class="panel-body">                
                     <div class="form-horizontal">
                         <div class="row">                            
-                            <div class="col-md-12 col-lg-12">
+                            <div class="col-md-8 col-lg-8">
                                 <!-- PRODUCT CATEGORY NAME -->
                                 @Html.HiddenFor(model => model.CategoryID)
                                 <div class="form-group">
-                                    <label class="col-md-3 control-label" for="ProductName">Tên Danh mục <span class="text-danger">*</span></label>
-                                    <div class="col-md-7">
+                                    <label class="col-sm-3 control-label" for="ProductName">Tên Danh mục <span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
                                         <span class="info-box">@Model.Name</span>
                                      </div>
                                 </div>
                                 <!-- PRODUCT CATEGORY DESCRIPTION -->
                                 <div class="form-group">
-                                    <label class="col-md-3 control-label" for="ProductName">Mô tả <span class="text-danger">*</span></label>
-                                    <div class="col-md-7">
+                                    <label class="col-sm-3 control-label" for="ProductName">Mô tả <span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
                                         <span class="info-box">@Model.Description</span>
                                     </div>
                                 </div>
                                 <!-- PRODUCT CATEGORY PARENT -->
                                 <div class="form-group">
-                                    <label class="col-md-3 control-label" for="ParentID">Danh Mục cha</label>
-                                    <div class="col-md-7">
+                                    <label class="col-sm-3 control-label" for="ParentID">Danh Mục cha</label>
+                                    <div class="col-sm-7">
                                         <span class="info-box">@Model.ParentCategoryName</span>
                                      </div>
                                 </div>
                             </div>
-                        </div>
+                            <div class="col-md-4 col-lg-4">
+                                <div class="form-group">
+                                    <label class="control-label">Ảnh Danh mục</label>
+                                    <!-- IMAGE -->
+                                    <div class="image-box">
+                                        @if (string.IsNullOrEmpty(Model.CategoryImage))
+                                        {
+                                            <img id="ImageBox" src="~/Content/Image/image_placeholder.jpg" class="image-box" />
+                                        }
+                                        else
+                                        {
+                                            <img id="ImageBox" src="@Model.CategoryImage" class="image-box" />
+                                        }
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>                        
+
                         <div class="row">
                             <div class="col-md-12 col-lg-12">
                                 <div class="form-group">
