DoanhHN - commit Supplier

--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -86,7 +86,12 @@
             updateCustomer: "@Url.Action("UpdateCustomer","Administrator")",
             addProduct: "@Url.Action("AddProduct","Administrator")",
             viewProduct: "@Url.Action("ViewProduct","Administrator")",
-            updateProduct: "@Url.Action("UpdateProduct", "Administrator")"
+            updateProduct: "@Url.Action("UpdateProduct", "Administrator")",
+
+            viewSupplier: "@Url.Action("ViewSupplier","Administrator")",
+            addSupplier: "@Url.Action("AddSupplier", "Administrator")",
+            updateSupplier: "@Url.Action("UpdateSupplier", "Administrator")",
+            deleteSupplier: "@Url.Action("RemoveSupplier", "Administrator")",
         };
 
         var sampleRegex = {
