DoanhHN - commit Shipper

--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -92,6 +92,11 @@
             addSupplier: "@Url.Action("AddSupplier", "Administrator")",
             updateSupplier: "@Url.Action("UpdateSupplier", "Administrator")",
             deleteSupplier: "@Url.Action("RemoveSupplier", "Administrator")",
+
+            viewShipper: "@Url.Action("ViewShipper", "Administrator")",
+            addShipper: "@Url.Action("AddShipper", "Administrator")",
+            updateShipper: "@Url.Action("UpdateShipper", "Administrator")",
+            deleteShipper: "@Url.Action("RemoveShipper", "Administrator")",
         };
 
         var sampleRegex = {
