--- a/170516/Views/Home/Index.cshtml
+++ b/170516/Views/Home/Index.cshtml
@@ -3,18 +3,8 @@
 }
 
 <div class="col-lg-3 col-md-3 col-sm-4">
-    <div class="list-group table-of-contents">
-        <a class="list-group-item" href="#navbar">Navbar</a>
-        <a class="list-group-item" href="#buttons">Buttons</a>
-        <a class="list-group-item" href="#typography">Typography</a>
-        <a class="list-group-item" href="#tables">Tables</a>
-        <a class="list-group-item" href="#forms">Forms</a>
-        <a class="list-group-item" href="#navs">Navs</a>
-        <a class="list-group-item" href="#indicators">Indicators</a>
-        <a class="list-group-item" href="#progress-bars">Progress bars</a>
-        <a class="list-group-item" href="#containers">Containers</a>
-        <a class="list-group-item" href="#dialogs">Dialogs</a>
-    </div>
+    <!-- account -->
+    @{Html.RenderAction("ProductMenu", "Home");}
 </div>
 <div class="col-lg-9 col-md-9 col-sm-8">
     <div class="jumbotron">
@@ -44,5 +34,9 @@
             <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
         </div>
     </div>
-</div> 
+</div>
 
+@section Scripts
+{
+    <script src="@Url.Content("~/Scripts/Home/index.js")"></script>
+}
