--- a/170516/Content/common.css
+++ b/170516/Content/common.css
@@ -281,20 +281,23 @@ th.center {
         color: rgb(12, 97, 33);
     }
 
+.card-container.card.validation-summary-errors > ul {
+    list-style: none;
+    font-size: 14px;
+    padding-left: 10px;
+}
+
+.card-container.card.validation-summary-errors > li {
+    list-style: none;
+    font-size: 14px;
+    padding-left: 10px;
+}
+
 .main-content {
     margin-top: 80px;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 12px;
 }
-
-.validation-summary-errors {
-}
-
-    .validation-summary-errors ul, li {
-        list-style: none;
-        font-size: 14px;
-        padding-left: 10px;
-    }
 
 .nav-dropdown-menu {
 }
