--- a/170516/Content/dlMenu/css/component.css
+++ b/170516/Content/dlMenu/css/component.css
@@ -72,11 +72,12 @@
 	display: block;
 	position: relative;
 	padding: 15px 20px;
-	font-size: 16px;
-	line-height: 20px;
+	font-size: 14px;
+	line-height: 5px;
 	font-weight: 300;
-	color: #fff;
+	color: #333333;
 	outline: none;
+    text-decoration: none;
 }
 
 .no-touch .dl-menuwrapper li a:hover {
@@ -86,19 +87,19 @@
 .dl-menuwrapper li.dl-back > a {
 	padding-left: 30px;
 	background: rgba(0,0,0,0.1);
-    color: #fff;
+    color: #333333;
 }
 
 .dl-menuwrapper li.dl-back:after,
 .dl-menuwrapper li > a:not(:only-child):after {
 	position: absolute;
 	top: 0;
-	line-height: 50px;
+	line-height: 30px;
 	font-family: 'icomoon';
 	speak: none;
 	-webkit-font-smoothing: antialiased;
 	content: "\e000";
-    color: #fff;
+    color: #333333;
 }
 
 .dl-menuwrapper li.dl-back:after {
@@ -106,7 +107,7 @@
 	/*color: rgba(212,204,198,0.3);*/
 	-webkit-transform: rotate(180deg);
 	transform: rotate(180deg);
-    color: #fff;
+    color: #333333;
 }
 
 .dl-menuwrapper li > a:after {
@@ -772,11 +773,11 @@ All this is done for any sub-level being entered.
 
 /* Demo 4 */
 .dl-menuwrapper button {
-	background: #2c3e50;
+	background: #f8f8f8;
 }
 
 .dl-menuwrapper button:hover,
 .dl-menuwrapper button.dl-active,
 .dl-menuwrapper ul {
-	background: #2c3e50;
+	background: #f8f8f8;
 }
