--- a/170516/Views/Home/Index.cshtml
+++ b/170516/Views/Home/Index.cshtml
@@ -12,47 +12,49 @@
                 {
                     <li>
                         <a href="#" data-id="@item.CategoryId">@item.CategoryName</a>
-                        @if (item.HasSubMenu)
+                        @if (item.SubCategoryList != null && item.SubCategoryList.Any())
                         {
-                        <ul class="dl-submenu">
-                            <li><a href="#"></a></li>
-                        </ul>
+                            <ul class="dl-submenu">
+                                <li><a href="#"></a></li>
+                            </ul>
                         }
                     </li>
-
-
                 }
             </ul>
         </div>
     </div>
 </div>
-<div class="col-lg-9 col-md-9 col-sm-8">
-    <div class="jumbotron">
-        <h1>ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+<div class="col-lg-9 col-md-9 col-sm-8 content-box">
+    <div class="hero_wrapper">
+        <img src="http://www.reuven-gth.com/wp-content/uploads/2013/11/constructionBanner.jpg">
+        <div class="hero-unit hero_info">
+            <h1>VẬT LIỆU XÂY DỰNG</h1>
+            <p class="lead">Tiết kiệm thời gian, mua vật liệu xây dựng tương lai và nhận hàng ngay tại nhà.</p>
+        </div>
     </div>
-
+    <div class="hero_heading">
+        <h2>Danh mục sản phẩm</h2>
+    </div>
     <div class="row">
-        <div class="col-md-4">
-            <h2>Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-            <h2>Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-            <h2>Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </div>
+        @foreach (var category in Model.Menu)
+        {
+            <div class="col-md-4">
+                <h4>@category.CategoryName</h4>
+                <img src="@category.ImageSrc" />
+                <p>@category.Description</p>
+
+                @if (category.SubCategoryList.Count > 0)
+                {
+                    <ul>
+                        @foreach (var subCategory in category.SubCategoryList)
+                        {
+                            <li><a href="@Url.Action("ShowProduct", "Product", new {id=subCategory.CategoryId})">@subCategory.CategoryName</a></li>
+                        }
+                    </ul>
+                }
+
+            </div>
+        }
     </div>
 </div>
 
