--- a/170516/Views/Shared/_Layout.cshtml
+++ b/170516/Views/Shared/_Layout.cshtml
@@ -68,5 +68,33 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/main_script")
     @RenderSection("scripts", required: false)
+
+    <script type="text/javascript">
+        var staticUrl = {
+            GetSubCategory: "@Url.Action("GetSubCategory","Product")"
+        };
+
+        // environment
+        window.$environment = 'DEVELOPMENT';
+
+        // config of toastr
+        toastr.options = {
+            "closeButton": true,
+            "debug": false,
+            "newestOnTop": false,
+            "progressBar": false,
+            "positionClass": "toast-bottom-right",
+            "preventDuplicates": true,
+            "onclick": null,
+            "showDuration": "300",
+            "hideDuration": "1000",
+            "timeOut": "5000",
+            "extendedTimeOut": "1000",
+            "showEasing": "swing",
+            "hideEasing": "linear",
+            "showMethod": "fadeIn",
+            "hideMethod": "fadeOut"
+        }
+    </script>
 </body>
 </html>
