--- a/170516/Views/Shared/_Layout.cshtml
+++ b/170516/Views/Shared/_Layout.cshtml
@@ -71,6 +71,7 @@
 
     <script type="text/javascript">
         var staticUrl = {
+            ViewCategory: "@Url.Action("ViewCategory","Product")",
             GetSubCategory: "@Url.Action("GetSubCategory","Product")"
         };
 
