Doanh HN - commit Order View and Update

--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -97,6 +97,10 @@
             addShipper: "@Url.Action("AddShipper", "Administrator")",
             updateShipper: "@Url.Action("UpdateShipper", "Administrator")",
             deleteShipper: "@Url.Action("RemoveShipper", "Administrator")",
+
+            viewOrder: "@Url.Action("ViewOrder", "Administrator")",           
+            updateOrder: "@Url.Action("UpdateOrder", "Administrator")",
+            cancelOrder: "@Url.Action("CancelOrder", "Administrator")",
         };
 
         var sampleRegex = {
