DoanhHN - commit Order Details

--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -101,6 +101,9 @@
             viewOrder: "@Url.Action("ViewOrder", "Administrator")",           
             updateOrder: "@Url.Action("UpdateOrder", "Administrator")",
             cancelOrder: "@Url.Action("CancelOrder", "Administrator")",
+
+            viewOrderDetails: "@Url.Action("ViewOrderDetails", "Administrator")",                      
+            cancelOrderProduct: "@Url.Action("CancelOrderProduct", "Administrator")",
         };
 
         var sampleRegex = {
