--- a/170516/Views/Administrator/AddSupplier.cshtml
+++ b/170516/Views/Administrator/AddSupplier.cshtml
@@ -11,7 +11,7 @@
         <div class="panel-heading">
             @*nav bar*@
             <ol class="breadcrumb">
-                <li><a href="@Url.Action("ViewProductCategory","Administrator")">Quản Lý nhà cung cấp</a></li>
+                <li><a href="@Url.Action("ViewSupplier","Administrator")">Quản Lý nhà cung cấp</a></li>
                 <li class="active">Tạo nhà cung cấp</li>
             </ol>
             <div class="panel-title title-3">Tạo nhà cung cấp mới</div>
