--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -42,10 +42,12 @@
                             <ul>
                                 <li><a href="@Url.Action("ViewProductCategory","Administrator")">Danh Mục</a></li>
                                 <li><a href="@Url.Action("ViewProduct","Administrator")">Sản Phẩm</a></li>
+                                <li><a href="@Url.Action("ViewSupplier","Administrator")">Nhà cung cấp</a></li>
+                                <li><a href="@Url.Action("ViewShipper","Administrator")">Shipper</a></li>
                             </ul>
                         </li>
                         <li><a href="stats.html"><i class="glyphicon glyphicon-user"></i> Tài Khoản</a></li>
-                        <li><a href="tables.html"><i class="glyphicon glyphicon-list"></i> Đơn Hàng</a></li>
+                        <li><a href="@Url.Action("ViewOrder","Administrator")"><i class="glyphicon glyphicon-list"></i> Đơn Hàng</a></li>
                         <li><a href="buttons.html"><i class="glyphicon glyphicon-stats"></i> Thống Kê</a></li>
                     </ul>
                 </div>
@@ -107,7 +109,8 @@
         };
 
         var sampleRegex = {
-            floatRegex: new RegExp("^\d{0,2}(\.\d{0,2}){0,1}$")
+            floatRegex: new RegExp("^\d{0,2}(\.\d{0,2}){0,1}$"),
+            dateVNRegex: new RegExp("(^(((0[1-9]|1[0-9]|2[0-8])[\/](0[1-9]|1[012]))|((29|30|31)[\/](0[13578]|1[02]))|((29|30)[\/](0[4,6,9]|11)))[\/](19|[2-9][0-9])\d\d$)|(^29[\/]02[\/](19|[2-9][0-9])(00|04|08|12|16|20|24|28|32|36|40|44|48|52|56|60|64|68|72|76|80|84|88|92|96)$)")
         };
 
         // environment
